src/test/deca/syntax/invalid/class_too_much_braces.deca
// Description:
//    Programme testant la déclaration d'une methode avec une accolade en trop
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 16/01/2023


class A {
	void m() {
		int x;
    }
}
}
